--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "firebase-tools": "^13.16.0",
+    "mdb-ui-kit": "^7.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
