--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "^18.2.0",
     "@popperjs/core": "^2.11.8",
     "@sweetalert2/theme-dark": "^5.0.18",
+    "@types/crypto-js": "^4.2.2",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "firebase-tools": "^13.16.0",
     "mdb-ui-kit": "^7.3.2",
     "rxjs": "~7.8.0",
